Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDVB.BAS

Public Declare Sub BTICard_HPIWrsL Lib "BTICARD.DLL" Alias "_BTICard_HPIWrsL@16" (ByRef valueptr As Long, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_HPIWrsW Lib "BTICARD.DLL" Alias "_BTICard_HPIWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_HPIWrW Lib "BTICARD.DLL" Alias "_BTICard_HPIWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Function BTICard_IDRegRd Lib "BTICARD.DLL" Alias "_BTICard_IDRegRd@8" (ByVal gate_array_num As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_IDRegWr Lib "BTICARD.DLL" Alias "_BTICard_IDRegWr@12" (ByVal value As Integer, ByVal gate_array_num As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IntClear Lib "BTICARD.DLL" Alias "_BTICard_IntClear@4" (ByVal handleval As Long)
Public Declare Function BTICard_IntDisable Lib "BTICARD.DLL" Alias "_BTICard_IntDisable@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_IntEnable Lib "BTICARD.DLL" Alias "_BTICard_IntEnable@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_IntEnableCond Lib "BTICARD.DLL" Alias "_BTICard_IntEnableCond@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_IntGet Lib "BTICARD.DLL" Alias "_BTICard_IntGet@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_IntInstall Lib "BTICARD.DLL" Alias "_BTICard_IntInstall@8" (ByVal hevent As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_IntReset Lib "BTICARD.DLL" Alias "_BTICard_IntReset@4" (ByVal handleval As Long)
Public Declare Function BTICard_IntUninstall Lib "BTICARD.DLL" Alias "_BTICard_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_IORdL Lib "BTICARD.DLL" Alias "_BTICard_IORdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_IORdsL Lib "BTICARD.DLL" Alias "_BTICard_IORdsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IORdsW Lib "BTICARD.DLL" Alias "_BTICard_IORdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_IORdW Lib "BTICARD.DLL" Alias "_BTICard_IORdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICard_IOWINRdW Lib "BTICARD.DLL" Alias "_BTICard_IOWINRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_IOWINWrW Lib "BTICARD.DLL" Alias "_BTICard_IOWINWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IOWrL Lib "BTICARD.DLL" Alias "_BTICard_IOWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IOWrsL Lib "BTICARD.DLL" Alias "_BTICard_IOWrsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IOWrsW Lib "BTICARD.DLL" Alias "_BTICard_IOWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_IOWrW Lib "BTICARD.DLL" Alias "_BTICard_IOWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_IRIGConfig Lib "BTICARD.DLL" Alias "_BTICard_IRIGConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGFieldGetDays Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetDays@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Function BTICard_IRIGFieldGetHours Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetHours@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Function BTICard_IRIGFieldGetMicrosec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetMicrosec@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Function BTICard_IRIGFieldGetMillisec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetMillisec@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Function BTICard_IRIGFieldGetMin Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetMin@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Function BTICard_IRIGFieldGetSec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldGetSec@8" (ByVal irigvalh As Long, ByVal irigvall As Long) As Long
Public Declare Sub BTICard_IRIGFieldPutDays Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutDays@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Sub BTICard_IRIGFieldPutHours Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutHours@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Sub BTICard_IRIGFieldPutMicrosec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutMicrosec@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Sub BTICard_IRIGFieldPutMillisec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutMillisec@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Sub BTICard_IRIGFieldPutMin Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutMin@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Sub BTICard_IRIGFieldPutSec Lib "BTICARD.DLL" Alias "_BTICard_IRIGFieldPutSec@12" (ByVal value As Long, ByRef irigvalh As Long, ByRef irigvall As Long)
Public Declare Function BTICard_IRIGInputThresholdGet Lib "BTICARD.DLL" Alias "_BTICard_IRIGInputThresholdGet@8" (ByRef dacval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGInputThresholdSet Lib "BTICARD.DLL" Alias "_BTICard_IRIGInputThresholdSet@8" (ByVal dacval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGRd Lib "BTICARD.DLL" Alias "_BTICard_IRIGRd@8" (ByRef irigtime As BTIIRIGTIME, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGRdEx Lib "BTICARD.DLL" Alias "_BTICard_IRIGRdEx@8" (ByRef timebuf As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGSyncStatus Lib "BTICARD.DLL" Alias "_BTICard_IRIGSyncStatus@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_IRIGTimeBCDToBin Lib "BTICARD.DLL" Alias "_BTICard_IRIGTimeBCDToBin@16" (ByRef timevalh As Long, ByRef timevall As Long, ByVal irigvalh As Long, ByVal irigvall As Long)
Public Declare Sub BTICard_IRIGTimeBCDToNanoBin Lib "BTICARD.DLL" Alias "_BTICard_IRIGTimeBCDToNanoBin@16" (ByRef timevalh As Long, ByRef timevall As Long, ByVal irigvalh As Long, ByVal irigvall As Long)
Public Declare Sub BTICard_IRIGTimeBinToBCD Lib "BTICARD.DLL" Alias "_BTICard_IRIGTimeBinToBCD@16" (ByRef irigvalh As Long, ByRef irigvall As Long, ByVal timevalh As Long, ByVal timevall As Long)
Public Declare Sub BTICard_IRIGTimeNanoBinToBCD Lib "BTICARD.DLL" Alias "_BTICard_IRIGTimeNanoBinToBCD@16" (ByRef irigvalh As Long, ByRef irigvall As Long, ByVal timevalh As Long, ByVal timevall As Long)
Public Declare Function BTICard_IRIGWr Lib "BTICARD.DLL" Alias "_BTICard_IRIGWr@8" (ByRef irigtime As BTIIRIGTIME, ByVal handleval As Long) As Long
Public Declare Function BTICard_IRIGWrEx Lib "BTICARD.DLL" Alias "_BTICard_IRIGWrEx@8" (ByRef timebuf As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_KernIntStatus Lib "BTICARD.DLL" Alias "_BTICard_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_KernStatus Lib "BTICARD.DLL" Alias "_BTICard_KernStatus@12" (ByRef valueptr As Long, ByVal typeval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_KernStatusEx Lib "BTICARD.DLL" Alias "_BTICard_KernStatusEx@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_MakeLong Lib "BTICARD.DLL" Alias "_BTICard_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function BTICard_MakeWord Lib "BTICARD.DLL" Alias "_BTICard_MakeWord@8" (ByVal valh As Byte, ByVal vall As Byte) As Integer
Public Declare Function BTICard_MantToAscii Lib "BTICARD.DLL" Alias "_BTICard_MantToAscii@12" (ByRef buf As String, ByVal mant As Long, ByVal exp As Long) As Long
Public Declare Function BTICard_Mask Lib "BTICARD.DLL" Alias "_BTICard_Mask@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Sub BTICard_MaxMant Lib "BTICARD.DLL" Alias "_BTICard_MaxMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Function BTICard_Mod Lib "BTICARD.DLL" Alias "_BTICard_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Sub BTICard_Mod64 Lib "BTICARD.DLL" Alias "_BTICard_Mod64@24" (ByRef resulth As Long, ByRef resultl As Long, ByVal valah As Long, ByVal valal As Long, ByVal valbh As Long, ByVal valbl As Long)
Public Declare Function BTICard_Mul Lib "BTICARD.DLL" Alias "_BTICard_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Sub BTICard_Mul64 Lib "BTICARD.DLL" Alias "_BTICard_Mul64@24" (ByRef resulth As Long, ByRef resultl As Long, ByVal valah As Long, ByVal valal As Long, ByVal valbh As Long, ByVal valbl As Long)
Public Declare Sub BTICard_NormalMant Lib "BTICARD.DLL" Alias "_BTICard_NormalMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Function BTICard_PortRd Lib "BTICARD.DLL" Alias "_BTICard_PortRd@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_PortWr Lib "BTICARD.DLL" Alias "_BTICard_PortWr@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_ProgRdW Lib "BTICARD.DLL" Alias "_BTICard_ProgRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_ProgWrW Lib "BTICARD.DLL" Alias "_BTICard_ProgWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_PXIStatus Lib "BTICARD.DLL" Alias "_BTICard_PXIStatus@12" (ByRef infoptr As Long, ByVal infotype As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_RAMFill Lib "BTICARD.DLL" Alias "_BTICard_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_RAMRdB Lib "BTICARD.DLL" Alias "_BTICard_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICard_RAMRdL Lib "BTICARD.DLL" Alias "_BTICard_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_RAMRdmL Lib "BTICARD.DLL" Alias "_BTICard_RAMRdmL@16" (ByRef valueptr As Long, ByRef addrptr As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMRdmW Lib "BTICARD.DLL" Alias "_BTICard_RAMRdmW@16" (ByRef valueptr As Integer, ByRef addrptr As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMRdsL Lib "BTICARD.DLL" Alias "_BTICard_RAMRdsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMRdsW Lib "BTICARD.DLL" Alias "_BTICard_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_RAMRdW Lib "BTICARD.DLL" Alias "_BTICard_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_RAMWipe Lib "BTICARD.DLL" Alias "_BTICard_RAMWipe@4" (ByVal handleval As Long)
Public Declare Sub BTICard_RAMWipeEx Lib "BTICARD.DLL" Alias "_BTICard_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrB Lib "BTICARD.DLL" Alias "_BTICard_RAMWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
